src/objects/Contact_Address__c.object
<CustomObject>
    <description>Junction object to tie multiple contacts to a single address record and multiple address records to a contact.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Name__c</fullName>
        <formula>Address__r.Address_Name__c</formula>
        <label>Address Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Address Lookup</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contact_Addresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Address_ID__c</fullName>
        <description>Used to restrict duplicate records via trigger.</description>
        <label>Contact Address ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Addresses</relationshipLabel>
        <relationshipName>Contact_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Linked_Address__c</fullName>
        <description>Use formula to display the full address of the linked address record for user verification.</description>
        <formula>IF(LEN(Address__r.Address_Line_1__c)&gt;0,Address__r.Address_Line_1__c &amp; BR(),&quot;&quot;)  &amp;
IF(LEN(Address__r.Address_Line_2__c)&gt;0,Address__r.Address_Line_2__c &amp; BR(),&quot;&quot;)  &amp;
IF(LEN(Address__r.Address_Line_3__c)&gt;0,Address__r.Address_Line_3__c &amp; BR(),&quot;&quot;)  &amp;
IF(LEN(Address__r.Address_Line_4__c)&gt;0,Address__r.Address_Line_4__c &amp; BR(),&quot;&quot;)  &amp;
Address__r.City__c &amp; 
If(LEN(Address__r.City__c)&gt;0 &amp;&amp; LEN(Text(Address__r.State_Province__c))&gt;0,&quot;, &quot;,&quot;&quot;) &amp;
Text(Address__r.State_Province__c) &amp; 
IF(LEN(Address__r.Postal_Code__c)&gt;0,&quot; &quot; &amp; Address__r.Postal_Code__c,&quot;&quot;) &amp;
If(LEN(Text(Address__r.Country__c))&gt;0,BR() &amp; Text(Address__r.Country__c),&quot;&quot;)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Mail_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Mail To</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Address</label>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Contact Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>